--- a/Aggregator-API-Search/pom.xml
+++ b/Aggregator-API-Search/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>Blockchain-API-Spring</artifactId>
+    <artifactId>Aggregator-API-Search</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Blockchain-API-Spring</name>
-    <description>Blockchain-API-Spring</description>
+    <name>Aggregator-API-Search</name>
+    <description>Aggregator-API-Search</description>
     <properties>
         <java.version>17</java.version>
         <mongodb.version>4.11.0</mongodb.version>
